[tool.poetry]
name = "borley"
version = "0.1.0"
description = "my workspace"
authors = ["borley1211 <km.isetan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
poetry = "^1.0.9"
ptpython = "^3.0.2"
py = "^1.8.2"
pydocstyle = "^5.0.2"
pytest = "^6.0.0"
python-dateutil = "^2.8.1"
python-jsonrpc-server = "^0.4.0"
regex = "^2020.6.8"
requests = "^2.24.0"
requests-toolbelt = "*"
scipy = "^1.5.0"
six = "^1.15.0"
sounddevice = "^0.4.0"
Cython = "^0.29.20"
ipython_genutils = "^0.2.0"
Pillow = "^7.1.2"
pygments = "^2.6.1"
PySoundFile = "^0.9.0"
PyYAML = "^5.3.1"
hatch = "^0.23.0"
youtube-dl = "^2020.6.16"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
ipykernel = "^5.3.0"
ipywidgets = "^7.5.1"
isort = "^5.0.0"
jedi = "^0.17.1"
jupyter = "^1.0.0"
jupyterlab = "^2.1.4"
jupyterlab-black = "^0.2.1"
mypy = "^0.781"
neovim = "^0.3.1"
notebook = "^6.0.3"
nptyping = "^1.2.0"
vim-vint = "^0.3.21"
yapf = "^0.30.0"
python-language-server = "^0.35.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
